tests/rosetta/out/Scala/angle-difference-between-two-bearings-2.error
scalac: exit status 1
/tmp/angle-difference-between-two-bearings-2.scala:11: error: type mismatch;
 found   : AnyVal
 required: Double
      println(angleDiff((tc).apply(0), (tc).apply(1)))
                                  ^
/tmp/angle-difference-between-two-bearings-2.scala:11: error: type mismatch;
 found   : AnyVal
 required: Double
      println(angleDiff((tc).apply(0), (tc).apply(1)))
                                                 ^
two errors found
