tests/rosetta/out/Scala/angle-difference-between-two-bearings-2.scala
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
object angle_difference_between_two_bearings_2 {
  def angleDiff(b1: Double, b2: Double): Double = {
    val diff = b2 - b1
    return ((diff % 360 + 360 + 180) % 360) - 180
  }
  
  def main(args: Array[String]): Unit = {
    var testCases = scala.collection.mutable.ArrayBuffer(List(20, 45), List(0 - 45, 45), List(0 - 85, 90), List(0 - 95, 90), List(0 - 45, 125), List(0 - 45, 145), List(29.4803, 0 - 88.6381), List(0 - 78.3251, 0 - 159.036), List(0 - 70099.74233810938, 29840.67437876723), List(0 - 165313.6666297357, 33693.9894517456), List(1174.8380510598456, 0 - 154146.66490124757), List(60175.77306795546, 42213.07192354373))
    for(tc <- testCases) {
      println(angleDiff((tc).apply(0), (tc).apply(1)))
    }
  }
}
